sample/hello/hello-istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hola
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: hola
    http:
      paths:
      - backend:
          serviceName: aloha
          servicePort: http

---
apiVersion: v1
kind: Service
metadata:
  name: aloha
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
