sample/hello/hello.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 3
  template:
    metadata:
      name: hello
      labels:
        app: hello
    spec:
      containers:
      - image: spike/hello:0.0.1
        name: main
        ports:
        - containerPort: 8080
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: hello
    http:
      paths:
      - backend:
          serviceName: hello
          servicePort: http
